# dss-codec

./: README.md  ds2decode.py  ds2decrypt.py  dss_decode.py
.github/workflows/: ci.yml
dss-codec/: CODEC_SPECIFICATION.md  Cargo.toml  README.md
dss-codec/src/: error.rs  lib.rs  main.rs  streaming.rs
dss-codec/src/codec/: ds2_qp.rs  dss_sp.rs  grundig_sp.rs  mod.rs
dss-codec/src/crypto/: ds2_encrypted.rs  mod.rs
dss-codec/src/demux/: ds2.rs  dss.rs  grundig.rs  mod.rs
dss-codec/src/tables/: grundig_sp.rs  mod.rs
dss-codec/tests/: integration.rs
dss-codec/tests/fixtures/: README.md  grundig_sample.dss
