[package]
name = "dss-codec"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Native DSS/DS2 audio decoder (Olympus Digital Speech Standard)"
license = "MIT"
homepage = "https://github.com/gaspardpetit/dss-codec"
repository = "https://github.com/gaspardpetit/dss-codec"
documentation = "https://github.com/gaspardpetit/dss-codec#readme"

[[bin]]
name = "dss-decode"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
hound = "3"
rubato = "0.16"
sha1 = "0.11"
sha2 = "0.11"

[dev-dependencies]
approx = "0.5"
